--- a/Shop.API/appsettings.json
+++ b/Shop.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ShopDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ShopDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
