--- a/Shop.Infrastructure/Shop.Infrastructure.csproj
+++ b/Shop.Infrastructure/Shop.Infrastructure.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Shop.Application\Shop.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
