--- a/Shop.API/appsettings.Development.json
+++ b/Shop.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ShopDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ShopDb;Trusted_Connection=True;"
+    "ShopDbConnectionString": "Server=mysqlserver,1433;Initial Catalog=ShopDb;User ID=SA;Password=Password12345!;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
