--- a/Shop.API/appsettings.Development.json
+++ b/Shop.API/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "ShopDbConnectionString": "Server=mysqlserver,1433;Initial Catalog=ShopDb;User ID=SA;Password=Password12345!;TrustServerCertificate=True"
+    "ShopDbConnectionString": "Server=mysqlserver,1433;User ID=SA;Password=Password12345!;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "KeyVaultURL": "https://shopapikeys.vault.azure.net/"
 }
