--- a/Shop.API/appsettings.json
+++ b/Shop.API/appsettings.json
@@ -1,12 +1,10 @@
 {
-  "ConnectionStrings": {
-    "ShopDbConnectionString": "Server=mysqlserver,1433;Initial Catalog=ShopDb;User ID=SA;Password=Password12345!;TrustServerCertificate=True"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KeyVaultURL": "https://shopapikeys.vault.azure.net/"
 }
