--- a/.github/workflows/release_testshop_api.yml
+++ b/.github/workflows/release_testshop_api.yml
@@ -1,12 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - testshop-api
+name: testshop-api Build and deploy
 
 on:
   push:
     branches:
-      - master
+      - release/ShopAPI/*
   workflow_dispatch:
 
 jobs:
@@ -27,13 +27,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/ShopAPI
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{env.DOTNET_ROOT}}/ShopAPI
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +62,5 @@ jobs:
           app-name: 'testshop-api'
           slot-name: 'Production'
           package: .
+
           
