--- a/.github/workflows/release_testshop_api.yml
+++ b/.github/workflows/release_testshop_api.yml
@@ -23,11 +23,14 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore ./Shop.API/Shop.API.csproj
+
+      - name: Build
+        run: dotnet build ./Shop.API/Shop.API.csproj --configuration Release --no-restore
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/ShopAPI
+        run: dotnet publish ./Shop.API/Shop.API.csproj -c Release -o ${{env.DOTNET_ROOT}}/ShopAPI
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,3 +67,4 @@ jobs:
           package: .
 
           
+
