--- a/Shop.API/appsettings.json
+++ b/Shop.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ShopDbConnectionString": "Server=tcp:mssql-testshop.database.windows.net,1433;Initial Catalog=shopdb;Persist Security Info=False;User ID=mssql-admin;Password=Password12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
