remove doker profile

--- a/Shop.API/Properties/launchSettings.json
+++ b/Shop.API/Properties/launchSettings.json
@@ -30,19 +30,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "VaultUri": "https://shopapikeys.vault.azure.net/"
       }
-    },
-    "Container (Dockerfile)": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080",
-        "VaultUri": "https://shopapikeys.vault.azure.net/"
-      },
-      "publishAllPorts": true,
-      "useSSL": true
     }
+    //"Container (Dockerfile)": {
+    //  "commandName": "Docker",
+    //  "launchBrowser": true,
+    //  "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+    //  "environmentVariables": {
+    //    "ASPNETCORE_HTTPS_PORTS": "8081",
+    //    "ASPNETCORE_HTTP_PORTS": "8080",
+    //    "VaultUri": "https://shopapikeys.vault.azure.net/"
+    //  },
+    //  "publishAllPorts": true,
+    //  "useSSL": true
+    //}
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
