--- a/Shop.API/Properties/launchSettings.json
+++ b/Shop.API/Properties/launchSettings.json
@@ -1,16 +1,5 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://shopapikeys.vault.azure.net/"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5298"
-    },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -22,6 +11,17 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7089;http://localhost:5298"
     },
+    "http": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://shopapikeys.vault.azure.net/"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5298"
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -30,19 +30,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "VaultUri": "https://shopapikeys.vault.azure.net/"
       }
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "VaultUri": "https://shopapikeys.vault.azure.net/"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
-    //"Container (Dockerfile)": {
-    //  "commandName": "Docker",
-    //  "launchBrowser": true,
-    //  "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-    //  "environmentVariables": {
-    //    "ASPNETCORE_HTTPS_PORTS": "8081",
-    //    "ASPNETCORE_HTTP_PORTS": "8080",
-    //    "VaultUri": "https://shopapikeys.vault.azure.net/"
-    //  },
-    //  "publishAllPorts": true,
-    //  "useSSL": true
-    //}
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
