--- a/Shop.API/appsettings.Development.json
+++ b/Shop.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ShopDbConnectionString": "Server=mysqlserver,1433;Initial Catalog=shopdb;User ID=SA;Password=Password12345!;TrustServerCertificate=True"
+    "ShopDbConnectionString": "Server=tcp:mssql-testshop.database.windows.net,1433;Initial Catalog=shopdb;Persist Security Info=False;User ID=mssql-admin;Password=Password12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
