Fixed key vault connection

--- a/Shop.API/appsettings.json
+++ b/Shop.API/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "ConnectionStrings": {
-    "ShopDbConnectionString": "Server=tcp:mssql-testshop.database.windows.net,1433;Initial Catalog=shopdb;Persist Security Info=False;User ID=mssql-admin;Password=Password12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
+  //"ConnectionStrings": {
+  //  "ShopDbConnectionString": "Server=tcp:mssql-testshop.database.windows.net,1433;Initial Catalog=shopdb;Persist Security Info=False;User ID=mssql-admin;Password=Password12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  //},
+  "KeyVaultURL": "https://shopapikv.vault.azure.net/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "KeyVaultURL": "https://shopapikeys.vault.azure.net/"
+  "AllowedHosts": "*"
 }
