fix keywault connection  url

--- a/Shop.API/appsettings.Development.json
+++ b/Shop.API/appsettings.Development.json
@@ -2,7 +2,7 @@
   //"ConnectionStrings": {
   //  "ShopDbConnectionString": "Server=tcp:mssql-testshop.database.windows.net,1433;Initial Catalog=shopdb;Persist Security Info=False;User ID=mssql-admin;Password=Password12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   //},
-  "KeyVaultURL": "https://shopapikv.vault.azure.net/",
+  "KeyVaultURL": "https://shopapikeys.vault.azure.net/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
